# hrm

./: README.md  pyproject.toml
account/: admin.py  views.py
auth/: admin.py  views.py
department/: admin.py  apps.py  models.py
department/migrations/: 0001_initial.py  0002_alter_department_id.py  0003_position_alter_department_createdat_and_more.py  0004_alter_department_id_alter_position_id.py  0005_alter_department_options_alter_position_options_and_more.py  0006_alter_department_id_alter_position_id.py  0007_alter_department_id_alter_position_id.py  0008_alter_department_id_alter_position_id.py  0009_alter_department_id_alter_position_id.py  0010_alter_department_id_alter_position_id.py  0011_alter_department_id_alter_position_id.py  0012_alter_department_id_alter_position_id.py
employee/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
employee/migrations/: 0001_initial.py  0001_squashed_0001_initial.py  0002_alter_employee_id.py  0003_employee_position_alter_employee_age_and_more.py  0004_alter_employee_department_alter_employee_id_and_more.py  0005_alter_employee_options_alter_employee_managers_and_more.py  0006_alter_employee_id.py  0007_remove_employee_name_alter_employee_id.py  0008_remove_employee_createdat_remove_employee_updatedat_and_more.py  0009_employee_createdat_employee_updatedat_and_more.py  0010_employee_photo_alter_employee_createdat_and_more.py
hrm/: routers.py  settings.py  urls.py  wsgi.py
orgunit/: admin.py  apps.py  models.py
orgunit/migrations/: 0001_initial.py  (+2 more)
templates/: base.html
(+2 files in other folders)
